Adding our S3 resource

--- a/serverless.yml
+++ b/serverless.yml
@@ -31,11 +31,14 @@ provider:
 
 
 # Create our resources with separate CloudFormation templates
+# Create our resources with separate CloudFormation templates
 resources:
   # API Gateway Errors
   - ${file(resources/api-gateway-errors.yml)}
   # DynamoDB
   - ${file(resources/dynamodb-table.yml)}
+  # S3
+  - ${file(resources/s3-bucket.yml)}
 
   
   # These environment variables are made available to our functions
