--- a/serverless.yml
+++ b/serverless.yml
@@ -32,6 +32,7 @@ provider:
 
 # Create our resources with separate CloudFormation templates
 # Create our resources with separate CloudFormation templates
+# Create our resources with separate CloudFormation templates
 resources:
   # API Gateway Errors
   - ${file(resources/api-gateway-errors.yml)}
@@ -39,6 +40,8 @@ resources:
   - ${file(resources/dynamodb-table.yml)}
   # S3
   - ${file(resources/s3-bucket.yml)}
+  # Cognito
+  - ${file(resources/cognito-user-pool.yml)}
 
   
   # These environment variables are made available to our functions
