--- a/serverless.yml
+++ b/serverless.yml
@@ -118,6 +118,20 @@ functions:
           authorizer: aws_iam
 
 
+            
+  billing:
+    # Defines an HTTP API endpoint that calls the main function in billing.js
+    # - path: url path is /billing/
+    # - method: POST request
+    handler: billing.main
+    events:
+      - http:
+          path: billing
+          method: post
+          cors: true
+          authorizer: aws_iam
+
+
 
 # Create our resources with separate CloudFormation templates
 resources:
