--- a/serverless.yml
+++ b/serverless.yml
@@ -22,6 +22,9 @@ custom:
   webpack:
     webpackConfig: ./webpack.config.js
     includeModules: true
+  # Load our secret environment variables based on the current stage.
+  # Fallback to default if it is not in prod.
+  environment: ${file(env.yml):${self:custom.stage}, file(env.yml):default}
 
 provider:
   name: aws
@@ -34,6 +37,7 @@ provider:
   # under process.env.
   environment:
     tableName: ${self:custom.tableName}
+    stripeSecretKey: ${self:custom.environment.stripeSecretKey}
 
 
   # 'iamRoleStatement' defines the permission policy for the Lambda function.
