--- a/package.json
+++ b/package.json
@@ -1,17 +1,9 @@
 {
-  "name": "notes-app-api",
-  "version": "1.1.1",
-  "description": "A Node.js starter for the Serverless Framework with async/await and unit test support",
+  "name": "video-cms-mock-api",
+  "version": "1.0.0",
+  "description": "Video CMS Mock API",
   "main": "handler.js",
-  "scripts": {
-    "test": "jest"
-  },
-  "author": "",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/AnomalyInnovations/serverless-nodejs-starter.git"
-  },
+  "scripts": {},
   "devDependencies": {
     "aws-sdk": "^2.224.1",
     "babel-core": "^6.26.0",
@@ -20,7 +12,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-3": "^6.24.1",
-    "jest": "^21.2.1",
     "serverless-offline": "^3.18.0",
     "serverless-webpack": "^5.1.0",
     "webpack": "^4.2.0",
@@ -29,7 +20,6 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "source-map-support": "^0.4.18",
-    "stripe": "^6.24.0",
     "uuid": "^3.2.1"
   }
 }
